--- a/llm-web-common/Cargo.toml
+++ b/llm-web-common/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = {version="0.4.26", features=["serde"]}
 hmac = "0.12.1"
 js-sys = "0.3"
 jwt = "0.16.0"
