--- a/llm-web-fe/Cargo.toml
+++ b/llm-web-fe/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 chrono = {version="0.4.26", features=["serde"]}
 gloo = {version="0.10.0", features=["events"]}
 gloo-events = "0.2"
+gloo-timers = "0.3.0"
 js-sys = "0.3"
 llm-web-common = {path = "../llm-web-common"}
 serde = { version = "1.0", features = ["derive"] }
