Model seelection tool

--- a/llm-web-fe/Cargo.toml
+++ b/llm-web-fe/Cargo.toml
@@ -33,6 +33,7 @@ features = [
 'HtmlElement',
 'HtmlImageElement',
 'HtmlInputElement',
+'HtmlLabelElement',
 'HtmlLinkElement',
 'HtmlOptionElement',
 'HtmlOptionsCollection',
