Please be concise checkbox

--- a/llm-web-fe/Cargo.toml
+++ b/llm-web-fe/Cargo.toml
@@ -30,6 +30,7 @@ features = [
 'Element',
 'EventTarget',
 'HtmlButtonElement',
+'HtmlDivElement',
 'HtmlElement',
 'HtmlImageElement',
 'HtmlInputElement',
